# fp2mp-baselines

./: .gitignore  README.md  pyproject.toml
examples/: 1_single_agent_baseline.ipynb  1_solutions.ipynb  2_cot_baseline.ipynb  2_evaluation.ipynb  3_react_baseline.ipynb  3_validation.ipynb  4_generator_critic_baseline.ipynb  5_blackboard_baseline.ipynb  6_major_vote_baseline.ipynb  7_debate_baseline.ipynb  blackboard.ipynb  example.ipynb
examples/data/: cities.json  evaluations.json  questions.json  results.json
fp2mp_baselines/: __init__.py  config.py  graph_utils.py  state.py  voting.py
fp2mp_baselines/blackboard/: __init__.py  baseline.py  board.py  graph.py  prompts.py
fp2mp_baselines/cot/: __init__.py  baseline.py  graph.py  prompts.py
fp2mp_baselines/debate/: __init__.py  baseline.py  graph.py  prompts.py
fp2mp_baselines/generator_critic/: __init__.py  baseline.py  graph.py  prompts.py
fp2mp_baselines/major_vote/: __init__.py  baseline.py  graph.py
fp2mp_baselines/react/: __init__.py  baseline.py  graph.py  tools.py
fp2mp_baselines/single_agent/: __init__.py  baseline.py  graph.py
fp2mp_eval/: __init__.py  _config.py  _prompt.py  core.py  models.py  utils.py
