[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fp2mp-baselines"
dynamic = ["version"]
authors = [{ name = "Vasilii Starikov", email = "vasilstar97@gmail.com" }]
description = "LangGraph baselines for text-to-text FP2MP planning tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }

dependencies = [
    "ddgs",
    "langchain",
    "langchain-community",
    "python-dotenv",
    "langchain-core",
    "langchain-openai",
    "langgraph",
    "pydantic",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
]

[tool.setuptools.packages.find]
include = ["fp2mp_baselines*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.optional-dependencies]
dev = []

[project.urls]
"Repository" = "https://github.com/vasilstar97/fp2mp-baselines"
"Bug Tracker" = "https://github.com/vasilstar97/fp2mp-baselines/issues"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.pylint.format]
max-line-length = 120
expected-line-ending-format = "LF"

[tool.pylint.main]
extension-pkg-allow-list = ["pydantic"]

[tool.pycodestyle]
max-line-length = 120

[tool.isort]
lines_after_imports = 2
multi_line_output = 3
line_length = 120
include_trailing_comma = true
